# movie-ranking-app

./: LICENSE  README.md  db.db  pyproject.toml  requirements.txt  setup.py  test.ipynb
movie_ranking_app/: exceptions.py  main.py
movie_ranking_app/auth/: change_credentials.py  login.py  oauth2_with_cookies.py  sign_up.py
movie_ranking_app/core/: __init__.py  movie.py  ranking.py  user_ratings.py
movie_ranking_app/models/: context.py  movie.py
movie_ranking_app/sample_db_creation/: created_tables.py  insert_sample_values.py  sample_data.json
movie_ranking_app/sqlite/: __init__.py  db_connection.py
movie_ranking_app/templates/: base.html  home.html  movie.html  user_info.html  user_ranking.html
movie_ranking_app/templates/auth/: credentials_expired.html
src/: config.py  exceptions.py  login.py  main.py  models.py  movie.py  ranking.py
src/auth/: __init__.py  auth.py  change_credentials.py  login.py  models.py  oauth2_with_cookies.py  sign_up.py
src/core/: __init__.py  movie.py  ranking.py  user_ratings.py
src/models/: auth.py  context.py  db.py  movie.py
src/sample_db_creation/: created_tables.py  insert_sample_values.py  sample_data.json
src/sqlite/: __init__.py  db_connection.py  models.py
src/static/: style.css  styles.css
src/templates/: base.html  home.html  movie.html  ranking.html  user_info.html  user_ranking.html
src/templates/auth/: credentials_expired.html  login.html  signup.html
